<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.epicodus.madlibs.MainActivity"
    android:weightSum="1">

    <EditText
        android:id="@+id/first_edit_text"
        style="@style/editTextStyle"
        android:hint="@string/enter_your_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/select_a_character_below" />

    <Spinner
        android:id="@+id/second_edit_text"
        style="@style/editTextStyle"
        android:entries="@array/name_array"
        android:hint="@string/noun"
        android:spinnerMode="dialog" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_a_mood"
        android:layout_margin="25dp" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_pretty"
            style="@style/editTextStyle"
            android:text="@string/pretty" />

        <RadioButton
            android:id="@+id/radio_sad"
            style="@style/editTextStyle"
            android:text="@string/sad" />

        <RadioButton
            android:id="@+id/radio_bad"
            style="@style/editTextStyle"
            android:text="@string/bad" />

    </RadioGroup>

    <!--<EditText-->
    <!--android:id="@+id/fourth_edit_text"-->
    <!--style="@style/editTextStyle"-->
    <!--android:hint="@string/noun" />-->

    <!--<EditText-->
    <!--android:id="@+id/fifth_edit_text"-->
    <!--style="@style/editTextStyle"-->
    <!--android:hint="@string/verb" />-->

    <!--<EditText-->
    <!--android:id="@+id/sixth_edit_text"-->
    <!--style="@style/editTextStyle"-->
    <!--android:hint="@string/adjective" />-->

    <!--<EditText-->
    <!--android:id="@+id/seventh_edit_text"-->
    <!--style="@style/editTextStyle"-->
    <!--android:hint="@string/noun" />-->

    <!--<EditText-->
    <!--android:id="@+id/eighth_edit_text"-->
    <!--style="@style/editTextStyle"-->
    <!--android:hint="@string/verb" />-->

    <!--<EditText-->
    <!--android:id="@+id/ninth_edit_text"-->
    <!--style="@style/editTextStyle"-->
    <!--android:hint="@string/noun" />-->

    <!--<EditText-->
    <!--android:id="@+id/tenth_edit_text"-->
    <!--style="@style/editTextStyle"-->
    <!--android:hint="@string/verb" />-->

    <Button
        android:id="@+id/get_story_button"
        style="@style/editTextStyle"
        android:text="@string/get_your_story" />

</LinearLayout>
